--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <meta charset="UTF-8">
     <title>Wally Hotels</title>
 </head>
 <body>
 
+<h1>Our Locations</h1>
+
+<div id="googleMap" style="width:50%;height:700px;"></div>
+
+<script>
+    function myMap() {
+        var mapProp = {center:new google.maps.LatLng(-27.464234, 153.021178), zoom:16};
+        var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
+        var marker = new google.maps.Marker({position: new google.maps.LatLng(-27.464234, 153.021178), animation:google.maps.Animation.BOUNCE});
+        marker.setMap(map);
+    }
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNaCB2My_2lKmpHhuNeyp6Qx3LBy95f9k&callback=myMap"></script>
 </body>
 </html>
