--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="style.css">
+<script src="js/maps.js"></script>
+<script src="js/youtube.js"></script>
+
 <title>Wally Hotels</title>
+
 </head>
 <body>
 
-<nav class="navbar">
-    <a href="#home"><img src="img/logo.png" height="18"/></a>
-    <a href="#about">About</a>
-    <a href="#locations">Locations</a>
-    <a href="#contact">Contact</a>
+<nav class="w3-top w3-bar w3-light-grey">
+    <a class="w3-bar-item w3-button logo" onclick="scrollto('main');">WallyHotels</a>
+    <a class="w3-bar-item w3-button" onclick="scrollto('about');">About</a>
+    <a class="w3-bar-item w3-button" onclick="scrollto('locations');">Locations</a>
+    <a class="w3-bar-item w3-button" onclick="scrollto('contact');">Contact</a>
 </nav>
 
-<nav class="main">
-    <h1 style="font-weight: lighter">Our Locations</h1>
+<div class="main">
+    <h1>Our Locations</h1>
     <div id="googleMap" style="width:80%;height:500px;"></div>
-</nav>
-<p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p><p>Heeeee</p>
+</div>
 
+<div id="player"></div>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNaCB2My_2lKmpHhuNeyp6Qx3LBy95f9k&callback=myMap"></script>
 <script>
-    function myMap() {
-        var mapProp = {center:new google.maps.LatLng(-27.464234, 153.021178), zoom:16};
-        var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-        var marker = new google.maps.Marker({position: new google.maps.LatLng(-27.464234, 153.021178), animation:google.maps.Animation.BOUNCE});
-        marker.setMap(map);
+    function scrollto (x) {
+        document.getElementById(x).scrollIntoView();
     }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNaCB2My_2lKmpHhuNeyp6Qx3LBy95f9k&callback=myMap"></script>
-<script src="script.js"></script>
 </body>
 </html>
