--- a/index.html
+++ b/index.html
@@ -1,36 +1,152 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<script src="js/maps.js"></script>
-<script src="js/youtube.js"></script>
+<html>
 <script src="js/script.js"></script>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="style.css">
-
 <title>Wally Hotels</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="style.css">
+<style>
+    body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
+</style>
+<body class="w3-light-grey" onload="locTable()">
 
-</head>
-<body>
-
-<nav class="w3-top w3-bar w3-light-grey">
-    <a class="w3-bar-item w3-button logo" onclick="scrollto('main');">WallyHotels</a>
-    <a class="w3-bar-item w3-button" onclick="scrollto('about');">About</a>
-    <a class="w3-bar-item w3-button" onclick="scrollto('locations');">Locations</a>
-    <a class="w3-bar-item w3-button" onclick="scrollto('contact');">Contact</a>
+<!-- Navigation Bar -->
+<nav class="w3-bar w3-top w3-white w3-large">
+    <a href="#" class="w3-bar-item w3-button w3-blue w3-mobile"><i class="fa fa-bed w3-margin-right"></i>Wally Hotels</a>
+    <a href="#locations" class="w3-bar-item w3-button w3-mobile">Locations</a>
+    <a href="#attractions" class="w3-bar-item w3-button w3-mobile">Attractions</a>
+    <a href="#about" class="w3-bar-item w3-button w3-mobile">About</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-mobile">Contact</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-right w3-light-grey w3-mobile">Book Now</a>
 </nav>
+<!-- Header -->
+<header class="w3-display-container w3-content" style="max-width:1500px;">
+    <div class="w3-image parallax"></div>
+    <div class="w3-display-left w3-padding w3-col l6 m8">
+        <div class="w3-container w3-blue">
+            <h2><i class="fa fa-bed w3-margin-right"></i>Wally Hotels</h2>
+        </div>
+        <div class="w3-container w3-white w3-padding-16">
+            <h6>Here at Wally Hotels, you can escape your everyday life. Join us on the beautiful Gold Coast, where the sun is always shining.</h6>
+            <button class="w3-button w3-dark-grey" type="submit"><i class="fa fa-search w3-margin-right"></i> Find a location</button>
+        </div>
+    </div>
+</header>
 
-<div class="main">
-    <h1>Our Locations</h1>
-    <div id="googleMap" style="width:80%;height:500px;"></div>
-    <form id="mapsearch">
-        <p id="postcode">Postcode: </p><input type="text" name="postcode">
-        <button type="button" onclick="validateForm()">Submit</button>
-    </form>
+<!-- Page content -->
+<div class="w3-content" id="locations" style="max-width:1532px;">
+    <br>
+    <div class="w3-row-padding">
+        <div class="w3-col l4 m7">
+            <h3>Our Locations</h3>
+            <table id="locTable" class="w3-table-all">
+
+            </table>
+            <br>
+            <label for="address">Search by address:</label><input id="address" class="w3-input w3-border" type="text"><button class="w3-button w3-dark-grey" onClick="addressSearch();">Search</button>
+            <p>We accept: <i class="fa fa-cc-visa w3-large"></i> <i class="fa fa-cc-mastercard w3-large"></i> <i class="fa fa-cc-amex w3-large"></i> <i class="fa fa-cc-cc-visa w3-large"></i><i class="fa fa-cc-paypal w3-large"></i></p>
+        </div>
+        <div class="w3-col l8 m5">
+            <div id="googleMap" style="width:100%;height:600px;"></div>
+        </div>
+    </div>
+
+    <div class="w3-row w3-large w3-center" style="margin:32px 0">
+        <div class="w3-third"><i class="fa fa-map-marker w3-text-blue"></i> 423 Some adr, Chicago, US</div>
+        <div class="w3-third"><i class="fa fa-phone w3-text-blue"></i> Phone: +00 151515</div>
+        <div class="w3-third"><i class="fa fa-envelope w3-text-blue"></i> Email: mail@mail.com</div>
+    </div>
+
+    <div class="w3-container">
+        <h3 id="about">About Us</h3>
+        <h6>We have a long history of being the best.</h6>
+    </div>
+
+    <div class="w3-row-padding w3-padding-16 w3-text-white w3-large">
+        <div class="w3-half w3-margin-bottom">
+            <div class="w3-display-container container">
+                <div id="player" class="video"></div>
+            </div>
+        </div>
+        <div class="w3-half">
+            <div class="w3-row-padding" style="margin:0 -16px">
+                <div class="w3-half w3-margin-bottom">
+                    <div class="w3-display-container">
+                        <img src="img/newyork2.jpg" alt="New York" style="width:100%">
+                        <span class="w3-display-bottomleft w3-padding">New York</span>
+                    </div>
+                </div>
+                <div class="w3-half w3-margin-bottom">
+                    <div class="w3-display-container">
+                        <img src="img/sanfran.jpg" alt="San Francisco" style="width:100%">
+                        <span class="w3-display-bottomleft w3-padding">San Francisco</span>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-row-padding" style="margin:0 -16px">
+                <div class="w3-half w3-margin-bottom">
+                    <div class="w3-display-container">
+                        <img src="img/pisa.jpg" alt="Pisa" style="width:100%">
+                        <span class="w3-display-bottomleft w3-padding">Pisa</span>
+                    </div>
+                </div>
+                <div class="w3-half w3-margin-bottom">
+                    <div class="w3-display-container">
+                        <img src="img/paris.jpg" alt="Paris" style="width:100%">
+                        <span class="w3-display-bottomleft w3-padding">Paris</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="w3-container w3-padding-32 w3-black w3-opacity w3-card-2 w3-hover-opacity-off" style="margin:32px 0;">
+        <h2>Get the best offers first!</h2>
+        <p>Join our newsletter.</p>
+        <label>E-mail</label>
+        <input class="w3-input w3-border" type="text" placeholder="Your Email address">
+        <button type="button" class="w3-button w3-blue w3-margin-top">Subscribe</button>
+    </div>
+
+    <div class="w3-container" id="contact">
+        <h2>Contact</h2>
+        <p>If you have any questions, do not hesitate to ask them.</p>
+        <i class="fa fa-map-marker w3-text-blue" style="width:30px"></i> Chicago, US<br>
+        <i class="fa fa-phone w3-text-blue" style="width:30px"></i> Phone: +00 151515<br>
+        <i class="fa fa-envelope w3-text-blue" style="width:30px"> </i> Email: mail@mail.com<br>
+        <form action="/action_page.php" target="_blank">
+            <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>
+            <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Email" required name="Email"></p>
+            <p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message" required name="Message"></p>
+            <p><button class="w3-button w3-black w3-padding-large" type="submit">SEND MESSAGE</button></p>
+        </form>
+    </div>
+
+    <!-- End page content -->
 </div>
 
-<div id="ytplayer"></div>
-<button type="button" onclick="vidChange();">Change</button>
+<!-- Footer -->
+<footer class="w3-padding-32 w3-black w3-center w3-margin-top">
+    <h5>Find Us On</h5>
+    <div class="w3-xlarge w3-padding-16">
+        <i class="fa fa-facebook-official w3-hover-opacity"></i>
+        <i class="fa fa-instagram w3-hover-opacity"></i>
+        <i class="fa fa-snapchat w3-hover-opacity"></i>
+        <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+        <i class="fa fa-twitter w3-hover-opacity"></i>
+        <i class="fa fa-linkedin w3-hover-opacity"></i>
+    </div>
+    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+</footer>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNaCB2My_2lKmpHhuNeyp6Qx3LBy95f9k&callback=myMap"></script>
+<!-- Add Google Maps -->
+<script src="js/script.js"></script>
+<script src="js/maps.js"></script>
+<script src="js/youtube.js"></script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBJnvxt_mvWhB20KY0iUpqNjvnfQjvUGqg&libraries=places,geometry&callback=mapConfig"></script>
+
 </body>
 </html>
