--- a/index.html
+++ b/index.html
@@ -72,35 +72,7 @@
             </div>
         </div>
         <div class="w3-half">
-            <div class="w3-row-padding" style="margin:0 -16px">
-                <div class="w3-half w3-margin-bottom">
-                    <div class="w3-display-container">
-                        <img src="img/newyork2.jpg" alt="New York" style="width:100%">
-                        <span class="w3-display-bottomleft w3-padding">New York</span>
-                    </div>
-                </div>
-                <div class="w3-half w3-margin-bottom">
-                    <div class="w3-display-container">
-                        <img src="img/sanfran.jpg" alt="San Francisco" style="width:100%">
-                        <span class="w3-display-bottomleft w3-padding">San Francisco</span>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-row-padding" style="margin:0 -16px">
-                <div class="w3-half w3-margin-bottom">
-                    <div class="w3-display-container">
-                        <img src="img/pisa.jpg" alt="Pisa" style="width:100%">
-                        <span class="w3-display-bottomleft w3-padding">Pisa</span>
-                    </div>
-                </div>
-                <div class="w3-half w3-margin-bottom">
-                    <div class="w3-display-container">
-                        <img src="img/paris.jpg" alt="Paris" style="width:100%">
-                        <span class="w3-display-bottomleft w3-padding">Paris</span>
-                    </div>
-                </div>
-            </div>
-        </div>
+            <a class="twitter-timeline" data-lang="en" data-height="500" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>        </div>
     </div>
 
     <div class="w3-container w3-padding-32 w3-black w3-opacity w3-card-2 w3-hover-opacity-off" style="margin:32px 0;">
